# ThinkFlix

./: .gitignore  README.md  TASK.md  pyproject.toml
briefing/: __init__.py  __main__.py  audio.py  cli.py  config.py  ffmpeg.py  images.py  ingest.py  models.py  pipeline.py  planner.py  slides.py  video.py
briefing/prompts/: __init__.py  planner_gemma.md
configs/: default.yaml
data/input/: ai-index-2025.md
docs/: explanation.md
tests/: test_audio.py  test_cli.py  test_ffmpeg.py  test_grounding.py  test_ingest.py  test_models.py  test_pipeline.py  test_slides.py  test_video.py
